--- a/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/common/navigation.jspf
@@ -5,7 +5,7 @@
 	    <div class="navbar-collapse">
 	        <ul class="nav navbar-nav">
                     <li><img border="0" alt="W3Schools" src="/images/Milford.png" width="50" height="50"></li>
-	            <li class="active"><a href="/login">Home</a></li>
+	            <li class="active"><a href="/welcome">Home</a></li>
 	            <li><a href="/list-todos">Todos</a></li>
 	        </ul>
                 <ul class="nav navbar-right">
